--- a/estilos.css
+++ b/estilos.css
@@ -3,6 +3,7 @@ body, html {
     margin: 0;
     overflow: hidden; 
     height: 100%; 
+    background: none;
 }
 
 html {
@@ -78,6 +79,9 @@ header {
 
 .botonDescargar{
     top: 1000px;
+    cursor: pointer;
+    transition: opacity 2s ease;
+
 }
 
 .derecha{
@@ -95,4 +99,5 @@ header {
     color: green;
     height: 400px;
 }
+
 
