--- a/estilos.css
+++ b/estilos.css
@@ -96,13 +96,13 @@ header {
 }
 
 .izquierda{
-    padding: 100px 40px 40px 40px;
+    padding: 100px 60px 40px 40px;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: center;
     align-content: flex-start;
     text-align: left;
-    width: 80%;
+    width: 60%;
     height: 100vh;
 }
 .izquierda>h2{
@@ -213,6 +213,9 @@ header {
     z-index: 9999999;   
 }
 
+.botonWrapper{
+    text-align: -webkit-center;
+}
 /*Diseño desponsive para modificar el botón*/
 @media screen and (max-width:800px) {
     .derecha{
