--- a/estilos.css
+++ b/estilos.css
@@ -144,12 +144,14 @@ header {
 
 /* Contenedor principal del slider */
 .sliderPrincipal {
-    width: 100%;
+    width: 90vw;
     overflow: hidden;
-    position: relative;
-    right: 0;
+    position: absolute;
+    right:26.5vw;
+    /*
     mask-image: linear-gradient(to right, rgba(0, 0, 0, 0), black 10%, black 90%, rgba(0, 0, 0, 0));
     -webkit-mask-image: linear-gradient(to right, rgba(0, 0, 0, 0), black 10%, black 90%, rgba(0, 0, 0, 0));
+    */
 }
 
 .sliderImagenesArriba, .sliderImagenesAbajo {
