--- a/styles.css
+++ b/styles.css
@@ -3,12 +3,15 @@ body, html {
     padding: 0;
     margin: 0;
     font-family: "Inter", sans-serif;
-    background-image: url(../img/fondo.png);
+    background-image: url(/img/fondo.png);
     background-repeat: repeat;
     background-size:9%;
     background-attachment: fixed;
-    
+    scroll-behavior: smooth;
+
 }
+
+
 
 .scroll{
     overflow: hidden;
@@ -259,6 +262,7 @@ header a{
 .botonMovil{
     display: none;
 }
+
 @media (max-width:768px){
     .sobreMi h2{
         padding: 0px 50px;
@@ -274,8 +278,9 @@ header a{
         font-family: 'Inter';
         font-weight: 400;
         font-size: 16px;
-        background-color: #283856;
-        color: white;
+        background-color: white;
+        color: #001F3F !important;
+        text-decoration: none !important;
         height: 40px;
         border-radius: 50px;
         width: 150px;
@@ -325,6 +330,11 @@ header a{
 .proyectosSecundarios{
     height: 60vh;
     display: none;
+}
+
+.proyectosSecundarios img{
+    height:336px ;
+    width: 480px;
 }
 
 .botonesProyectos{
@@ -427,28 +437,40 @@ header a{
 
 /*Plans Landing*/
 
-.proyectoPlansLanding{
-    background-color: black;
+.proyectoPlansLanding {
+    position: relative; 
+    width: 100%;
+    height: 100%;
     border-radius: 20px;
     display: flex;
     flex-direction: row;
-    justify-content:space-between;
-    width: 100%;
+    justify-content: space-between;
     align-items: center;
     align-content: center;
+    background-color: black;
+    box-sizing: border-box;
+    overflow: hidden; 
+}
+.proyectoPlansLanding .blur-background {
+    position: absolute;
+    top: 10%; 
+    left: 10%; 
+    width: 80%; 
+    height: 80%;
+    background: radial-gradient(circle, rgba(50,150,10, 1) 2%, rgba(0, 0, 0, 1) 100%);
+    border-radius: 50%;
+    filter: blur(20px); 
+    z-index: 0; 
 }
 
-.imagenPlansLanding{
-    width: 50%;
-    height: 100%;
-    border-top-left-radius: 20px;
-    border-bottom-left-radius: 20px;
-    background-image: url(img/fondoLanding.png);
-    background-size: cover;
-    backface-visibility: visible;
-    background-repeat: no-repeat;
-    overflow: hidden;
+.letrasPlansLanding {
+    position: relative;
+    z-index: 1;
+    text-align: center;
+    padding: 20px;
 }
+
+
 
 .imagenPlansLanding img{
     width: 100%;
@@ -459,7 +481,7 @@ header a{
 
 .letrasPlansLanding{
     color: white;
-    width: 50%;
+    width: 100%;
     padding: 50px;
     height: 60%;
     display: flex;
@@ -479,13 +501,50 @@ header a{
     font-family: 'Inter', serif;
     font-weight: 600;
     font-style: normal;
-    font-size: 20px;
+    font-size: 18px !important;
     padding: 5px 15px 5px 15px;
     border-radius: 50px;
 }
 
+/*MovieList*/
+.proyectoMovieList{
+    background-color: #151515;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 100%;
+    align-items: center;
+}
+.imagenMovieList img{
+    height: 60vh;
+}
+.imagenMovieList{
+    width: 40%;
+    margin: 0px 15px;
+}
+.letrasMovieList{
+    color: white;
+    width: 50%;
+    padding: 50px;
+    height: 60%;
+    font-family: 'Inter';
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
 
-
+.letrasMovieList button{
+    color: black;
+    background-color: white;
+    font-family: 'Inter', serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 18px !important;
+    padding: 5px 15px 5px 15px;
+    border-radius: 50px;
+}
 /*Responsive de las tarjetas*/
 
 @media (min-width: 1313px) {
@@ -550,6 +609,12 @@ header a{
         width: 0%;
     }
     .letrasPlansLanding{
+        width: 100%;
+    }
+    .imagenMovieList{
+        display: none;
+    }
+    .letrasMovieList{
         width: 100%;
     }
 }
@@ -653,5 +718,40 @@ header a{
     .campoFormulario button {
         font-size: 14px;
     }
+}
+footer {
+    background-color: #001F3F;
+    padding: 0px;
+    margin: 0px;
+    display: flex;
+    justify-content: center; /* Centra horizontalmente */
+    align-items: center;    /* Centra verticalmente */
+    flex-direction: column; /* Asegura que los elementos estén en columna */
+    color: white;
+    text-align: center;
+    width: 100%;
+    height: 20%;
+}
+
+.footerLinea {
+    display: flex;
+    justify-content: space-between; /* Espaciado entre los elementos */
+    align-items: center;            /* Centra verticalmente */
+    width: 80%;                     /* Ajusta el ancho del contenido */
+    max-width: 1200px;              /* Limita el ancho máximo */
+}
+
+.izquierda, .derecha {
+    display: flex;
+    flex-direction: row;
+    align-items: center; /* Centra verticalmente el contenido */
+    text-align: center;
+}
+
+.derecha div {
+    display: flex;
+    flex-direction: column; /* Asegura que los elementos dentro estén en columna */
+    align-items: center;    /* Centra horizontalmente */
+    margin: 0 10px;         /* Espaciado entre las columnas */
 }
 
